simonweald/01_deploy.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: simonweald-com
  namespace: shw
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: front-end
          image: registry.analbeard.com/website/simonweald:latest
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 3
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 3
      imagePullSecrets:
      - name: registry-secret
