simonweald/cache-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simonweald-cache
  namespace: wealdy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simonweald-cache
  template:
    metadata:
      labels:
        app: simonweald-cache
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - simonweald-cache
            topologyKey: "kubernetes.io/hostname"
      containers:
      - name: varnish
        image: hermsi/alpine-varnish:6.1
        volumeMounts:
        - name: varnish-config
          mountPath: /etc/varnish/
        ports:
        - name: varnish-port
          containerPort: 8080
      volumes:
      - name: varnish-config
        configMap:
          name: simonweald-cache-vcl
          items:
          - key: default.vcl
            path: default.vcl
