simonweald/web-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simonweald-web
  namespace: wealdy
  labels:
    owner: simonweald-at-giantswarm.io
    app.kubernetes.io/name: simonweald-web
  annotations:
    flux.weave.works/automated: 'true'
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simonweald-web
  template:
    metadata:
      labels:
        app: simonweald-web
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - simonweald-web
            topologyKey: "kubernetes.io/hostname"
      containers:
      serviceAccount: simonweald-web
      serviceAccountName: simonweald-web
      - name: front-end
        image: registry.analbeard.com/website/simonweald:a288bbe
        ports:
        - name: http-port
          containerPort: 80
        readinessProbe:
          httpGet:
            path: /
            port: http-port
          initialDelaySeconds: 5
          periodSeconds: 3
        livenessProbe:
          httpGet:
            path: /
            port: http-port
          initialDelaySeconds: 5
          periodSeconds: 3
      imagePullSecrets:
      - name: private-registry-auth
