simonweald/02_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: simonweald-com
  namespace: shw
spec:
  ports:
  - port: 80 
    targetPort: 80
    protocol: TCP
  selector:
    app: web
