simonweald/cache-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simonweald-cache
  namespace: wealdy
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: simonweald-cache
