simonweald/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simonweald-web
  namespace: wealdy
  labels:
    owner: simonweald-at-giantswarm.io
    app.kubernetes.io/name: simonweald-web
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: simonweald-web
